<resources>
    <string name="app_name" translatable="false">PicAWord</string>
    <!-- Categories names -->
    <string name="category_house">Around the house</string>
    <string name="category_food">Food</string>
    <string name="category_vehicles">Vehicles</string>
    <string name="category_body">Human Body</string>
    <string name="category_animals">Animals</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_misc">Miscellaneous</string>

    <!-- Levels names -->

    <!-- Around the house levels -->
    <string name="level_sink" translatable="false">Sink</string>
    <string name="level_bathroom" translatable="false">Bathroom</string>
    <string name="level_chair" translatable="false">Chair</string>
    <string name="level_clock" translatable="false">Clock</string>
    <string name="level_desk" translatable="false">Desk</string>
    <string name="level_cutlery" translatable="false">Cutlery</string>
    <string name="level_pillow" translatable="false">Pillow</string>
    <string name="level_plant" translatable="false">Plant</string>
    <string name="level_cup" translatable="false">Cup</string>
    <string name="level_wall" translatable="false">Wall</string>
    <string name="level_shelf" translatable="false">Shelf</string>
    <string name="level_computer" translatable="false">Computer</string>
    <string name="level_newspaper" translatable="false">Newspaper</string>
    <string name="level_mobile_phone" translatable="false">Mobile phone</string>
    <string name="level_lego" translatable="false">Lego</string>
    <string name="level_money" translatable="false">Money</string>
    <!-- Food levels -->
    <string name="level_hotdog" translatable="false">Hotdog</string>
    <string name="level_couscous" translatable="false">Couscous</string>
    <string name="level_cookie" translatable="false">Cookie</string>
    <string name="level_cola" translatable="false">Cola</string>
    <string name="level_coffee" translatable="false">Coffee</string>
    <string name="level_fruit" translatable="false">Fruit</string>
    <string name="level_pizza" translatable="false">Pizza</string>
    <string name="level_wine" translatable="false">Wine</string>
    <string name="level_bread" translatable="false">Bread</string>
    <string name="level_vegetable" translatable="false">Vegetable</string>
    <string name="level_cake" translatable="false">Cake</string>
    <string name="level_pie" translatable="false">Pie</string>
    <!-- Vehicles levels -->
    <string name="level_tractor" translatable="false">Tractor</string>
    <string name="level_bus" translatable="false">Bus</string>
    <string name="level_bicycle" translatable="false">Bicycle</string>
    <string name="level_boat" translatable="false">Boat</string>
    <string name="level_vehicle" translatable="false">Vehicle</string>
    <string name="level_wheel" translatable="false">Wheel</string>
    <string name="level_van" translatable="false">Van</string>
    <string name="level_sailboat" translatable="false">Sailboat</string>
    <string name="level_car" translatable="false">Car</string>
    <string name="level_skateboard" translatable="false">Skateboard</string>
    <!-- Human body levels -->
    <string name="level_beard" translatable="false">Beard</string>
    <string name="level_smile" translatable="false">Smile</string>
    <string name="level_mouth" translatable="false">Mouth</string>
    <string name="level_foot" translatable="false">Foot</string>
    <string name="level_ear" translatable="false">Ear</string>
    <string name="level_eyelash" translatable="false">Eyelash</string>
    <string name="level_hair" translatable="false">Hair</string>
    <string name="level_hand" translatable="false">Hand</string>
    <!-- Animals levels -->
    <string name="level_bird" translatable="false">Bird</string>
    <string name="level_bear" translatable="false">Bear</string>
    <string name="level_cat" translatable="false">Cat</string>
    <string name="level_horse" translatable="false">Horse</string>
    <string name="level_pet" translatable="false">Pet</string>
    <string name="level_duck" translatable="false">Duck</string>
    <string name="level_turtle" translatable="false">Turtle</string>
    <string name="level_dog" translatable="false">Dog</string>
    <string name="level_butterfly" translatable="false">Butterfly</string>
    <!-- Clothing levels -->
    <string name="level_sunglasses" translatable="false">Sunglasses</string>
    <string name="level_necklace" translatable="false">Necklace</string>
    <string name="level_dress" translatable="false">Dress</string>
    <string name="level_tie" translatable="false">Tie</string>
    <string name="level_hat" translatable="false">Hat</string>
    <string name="level_jacket" translatable="false">Jacket</string>
    <string name="level_beanie" translatable="false">Beanie</string>
    <string name="level_jersey" translatable="false">Jersey</string>
    <string name="level_scarf" translatable="false">Scarf</string>
    <string name="level_jewellery" translatable="false">Jewellery</string>
    <string name="level_shoe" translatable="false">Shoe</string>
    <string name="level_sneakers" translatable="false">Sneakers</string>
    <string name="level_ring" translatable="false">Ring</string>
    <string name="level_jeans" translatable="false">Jeans</string>
    <string name="level_umbrella" translatable="false">Umbrella</string>
    <string name="level_glasses" translatable="false">Glasses</string>
    <string name="level_bag" translatable="false">Bag</string>
    <string name="level_helmet" translatable="false">Helmet</string>
    <!-- Miscellaneous levels -->
    <string name="level_rock" translatable="false">Rock</string>
    <string name="level_toy" translatable="false">Toy</string>
    <string name="level_balloon" translatable="false">Balloon</string>
    <string name="level_branch" translatable="false">Branch</string>
    <string name="level_surfboard" translatable="false">Surfboard</string>
    <string name="level_hanukkah" translatable="false">Hanukkah</string>
    <string name="level_clown" translatable="false">Clown</string>
    <string name="level_whiteboard" translatable="false">Whiteboard</string>
    <string name="level_flag" translatable="false">Flag</string>


    <!-- General -->
    <string name="go_button">Go!</string>
    <!-- Intro -->
    <string name="intro_header" translatable="false">Pic A Word</string>
    <!-- Login -->
    <string name="login_header">Hi there!</string>
    <string name="login_small_header">Welcome</string>
    <string name="login_message" translatable="false">Please enter your user name</string>
    <string name="login_username_placeholder">Username</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="login_button_text">Login</string>
    <string name="username_field_invalid">Between 3–10 alphabetic only characters!</string>
    <!-- Choose language -->
    <string name="choose_language_header">Choose the language you want to learn.</string>
    <string name="username">Username</string>
    <string name="text_field_required">*Required</string>
    <!-- Progress percentage format -->
    <string name="progress_percentage_string" translatable="false">%1$d%%</string>
    <string name="language_en">English</string>
    <string name="language_he">Hebrew</string>
    <string name="choose_language">Choose language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_language">Add language</string>

</resources>