<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.NameFragment">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/assistant_extrabold"
        android:text="@string/login_header"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_semibold"
        android:text="@string/login_small_header"
        app:layout_constraintStart_toStartOf="@+id/login_header"
        app:layout_constraintTop_toBottomOf="@+id/login_header" />

    <TextView
        android:id="@+id/enter_username_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/assistant_semibold"
        android:text="@string/login_message"
        app:layout_constraintStart_toStartOf="@+id/login_header"
        app:layout_constraintTop_toBottomOf="@+id/login_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_text_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/assistant_semibold"
        android:hint="@string/username"
        app:boxBackgroundColor="#F1F1F1"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeWidth="0dp"
        app:helperText="*Required"
        app:layout_constraintStart_toStartOf="@+id/login_header"
        app:layout_constraintTop_toBottomOf="@+id/login_header"
        app:startIconContentDescription="Username end icon"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

<!--        TODO compilation error-->
<!--        android:textColorHint="454545"-->


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="130dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/assistant_semibold"
        android:text="@string/sign_up_button_text"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="@+id/user_name_text_field"
        app:layout_constraintTop_toBottomOf="@+id/user_name_text_field" />

</androidx.constraintlayout.widget.ConstraintLayout>
